--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Leeds Trinity University</h3>
               <div class="subheading mb-3">Media</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <div></div>
+              <p></p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2017 - Present</span>
@@ -162,8 +162,8 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University Academy Keighley</h3>
-              <div class="subheading mb-3">GCSE's</div>
-              <p>GPA: 3.56</p>
+              <div class="subheading mb-3">Maths, English, Biology, Chemistry, Physics, Art, Food Tech</div>
+              <p></p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2010 - July 2014</span>
